# LambdaJAM-Streaming-exercises

./: LICENSE  README.md  stack.yaml
exercise_0/: README.md  exercise0.cabal  shell.nix
exercise_0/LambdaJAM/Streaming/: Exercise0.hs
exercise_1/: ChangeLog.md  README.md  exercise1.cabal  shell.nix
exercise_1/LambdaJAM/Streaming/: Exercise1.hs
exercise_2/: README.md  exercise2.cabal  shell.nix
exercise_2/LambdaJAM/Streaming/: Exercise2.hs
exercise_3/: README.md  exercise3.cabal
exercise_3/LambdaJAM/Streaming/: Exercise3.hs
exercise_4/: LICENSE  README.md  exercise4.cabal  shell.nix
exercise_4/LambdaJAM/Streaming/: Exercise4.hs
exercise_5/: README.md  exercise5.cabal  languages.csv  shell.nix
exercise_5/LambdaJAM/Streaming/: Exercise5.hs
