name:                exercise0
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Ivan Lazar Miljenovic
maintainer:          Ivan.Miljenovic@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     LambdaJAM.Streaming.Exercise0
  build-depends:       base >=4.8 && <5
  default-language:    Haskell2010
