name:                exercise1
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Ivan Lazar Miljenovic
maintainer:          Ivan.Miljenovic@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     LambdaJAM.Streaming.Exercise1
  build-depends:       base >=4.10 && <4.11
                     , conduit >= 1.2.11 && < 1.4
                     , transformers
  default-language:    Haskell2010
