name:                exercise2
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Ivan Lazar Miljenovic
maintainer:          Ivan.Miljenovic@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     LambdaJAM.Streaming.Exercise2
  build-depends:       base >=4.8 && <5
                     , streaming == 0.2.*
                     , transformers
  default-language:    Haskell2010
