name:                exercise4
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Ivan Lazar Miljenovic
maintainer:          Ivan.Miljenovic@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     LambdaJAM.Streaming.Exercise4
  build-depends:       base >=4.8 && <5
                     , streaming == 0.2.*
                     , streaming-bytestring == 0.1.*
                     , streaming-with == 0.2.*
                     , transformers
  default-language:    Haskell2010
